working with sass variables and fonts

--- a/_/components/sass/style.scss
+++ b/_/components/sass/style.scss
@@ -1,4 +1,8 @@
-$bgcolor: #997740;
-body{
-  background: $bgcolor;
-}
+@import "compass";
+@import "susy";
+
+@import "variables";
+@import "mixins";
+@import "base";
+@import "layout";
+@import "modules";
