--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1,6 +1,62 @@
 @import url("https://fonts.googleapis.com/css?family=Spectral+SC");
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+/* line 5, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline; }
+
+/* line 22, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html {
+  line-height: 1; }
+
+/* line 24, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none; }
+
+/* line 26, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* line 28, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle; }
+
+/* line 30, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none; }
+  /* line 103, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+  q:before, q:after, blockquote:before, blockquote:after {
+    content: "";
+    content: none; }
+
+/* line 32, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none; }
+
+/* line 116, ../../../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block; }
+
 /* line 10, ../components/sass/_base.scss */
 body {
   font-family: Spectral SC, serif;
@@ -35,31 +91,41 @@ a {
 p {
   margin-bottom: 10px; }
 
-/* line 3, ../components/sass/_layout.scss */
+/* line 21, ../../../../../../.rvm/gems/ruby-2.4.1/gems/susy-2.2.12/sass/susy/language/susy/_box-sizing.scss */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/* line 14, ../components/sass/_layout.scss */
+.layout {
+  padding-right: 3%; }
+
+/* line 19, ../components/sass/_layout.scss */
 header img {
   width: 90%;
   margin: 2%;
   max-width: 200px;
   margin-bottom: 0; }
 
-/* line 12, ../components/sass/_layout.scss */
+/* line 28, ../components/sass/_layout.scss */
 .navigation {
   background: #175c73; }
-  /* line 15, ../components/sass/_layout.scss */
+  /* line 31, ../components/sass/_layout.scss */
   .navigation ul.nav li {
     list-style: none; }
-    /* line 17, ../components/sass/_layout.scss */
+    /* line 33, ../components/sass/_layout.scss */
     .navigation ul.nav li i {
       color: #f7b71a;
       padding-right: 0.5 em; }
-    /* line 21, ../components/sass/_layout.scss */
+    /* line 37, ../components/sass/_layout.scss */
     .navigation ul.nav li a {
       text-decoration: none;
       color: #FCF4DC;
       display: block;
       padding: 5px 10px; }
 
-/* line 32, ../components/sass/_layout.scss */
+/* line 48, ../components/sass/_layout.scss */
 footer {
   overflow: hidden;
   *zoom: 1;
