--- a/_/components/sass/_base.scss
+++ b/_/components/sass/_base.scss
@@ -11,7 +11,7 @@ body{
   font-family: $body_font;
   font-size: 1.2 rem;
   line-height:160%;
-  background: $paleyellow;
+  background: lighten($paleyellow, 50);
   color: $darkblue;
 }
  #{headings()}{
@@ -19,24 +19,3 @@ body{
    font-weight:normal;
    color: $darkgray;
  }
-
-h1{
-  font-size: 2.2rem;
-  color:lighten($darkblue, 25);
-  margin-bottom:0.4rem;
-  border-bottom:1px solid $lightgray;
-  padding-top: 10px;
-}
-
-
-a{
-  text-decoration: underline;
-  color:$mediumgray;
-  &:hover{
-    color:$orange;
-  }
-}
-
-p{
-  margin-bottom: 10px;
-}
